[package]
name = "nu_plugin_ndocker"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.1"
bytes = "1.10.1"
chrono = "0.4.41"
futures-core = "0.3.31"
futures-util = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
nu-plugin = "0.105.1"
nu-protocol = "0.105.1"
nu-utils = "0.105.1"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["fs", "io-std", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
typetag = "0.2.20"
